testdata/invalid/import-not-found.hzn
package probes

import missing "./does-not-exist"

@tracepoint("sched:sched_process_exec")
func OnExec(ctx tracepoint.Exec) i32 {
    return 0
}
